# servers

.github/workflows/: docker-publish.yml  hadolint.yml  python.yml  release.yml
src/git/: Dockerfile  README.md  bandit.yaml  pyproject.toml  run_bandit.sh
src/git/agent/: Dockerfile  run-cli.sh
src/git/docs/: CODING_STANDARDS.md.backup  architecture-decision-records-intro.md  how-to-write-adrs.md  testing-standards-mcp.md
src/git/docs/adl/: 0001-use-black-code-formatter.md  0002-require-python-312-minimum-version.md  README.md  adr-template-madr-light.md  needed-adrs.md
src/git/docs/adr/: 001-require-python-312-minimum.md
src/git/src/mcp_server_git/: server.py  types.py
src/git/tests/: test_server.py
