[project]
name = "mcp-server-git"
version = "0.6.2"
description = "A Model Context Protocol server providing tools to read, search, and manipulate Git repositories programmatically via LLMs"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Anthropic, PBC." }]
maintainers = [{ name = "David Soria Parra", email = "davidsp@anthropic.com" }]
keywords = ["git", "mcp", "llm", "automation"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.1.7",
    "gitpython>=3.1.45",
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
mcp-server-git = "mcp_server_git:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ty>=0.0.11",
    "ruff>=0.7.3",
    "pytest>=8.0.0",
    "black>=24.0.0",
    "bandit>=1.7.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.bandit]
# Exclude common test and documentation directories
exclude_dirs = ["tests", "docs", ".venv", ".git"]
# Set the confidence level for reporting issues
confidence_level = "MEDIUM"
# Set the severity level for reporting issues
severity_level = "MEDIUM"
# Enable/disable specific tests by ID
skips = ["B101", "B608"]  # Skip assert_used and sql_injection checks for now
# Enable recursive scanning
recursive = true
# Set the output format
format = "txt"
